--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,264 @@
     font-weight: 600;
     font-style: normal;
 } */
+
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: 1px solid hsla(0, 100%, 50%, 0.2);
+}
+
+body {
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+:root {
+  /* Colors */
+  --main-purple: #635fc7;
+  --main-purple-hover: #a8a4ff;
+
+  --very-dark-grey-db: #20212c;
+
+  --dark-grey: #2b2c37;
+  --lines-dark: #3e3f4e;
+  --medium-grey: #828fa3;
+  --lines-light: #e4ebfa;
+  --light-grey-lb: #f4f7fd;
+
+  --black: #000112;
+  --white: #ffffff;
+  --red: #ea5555;
+  --red-hover: #ff9898;
+}
+
+/* Typography */
+
+.heading-xl {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.heading-l {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+}
+
+.heading-m {
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 19px;
+}
+
+.heading-s {
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 2.4px;
+}
+
+.body-l {
+  font-weight: medium;
+  font-size: 13px;
+  line-height: 23px;
+}
+
+.body-m {
+  font-size: 12px;
+  line-height: 15px;
+}
+
+/* Typography */
+
+main {
+  width: 100vw;
+  height: 100vh;
+
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: 97px 1fr;
+  grid-area: "one two" "one three";
+}
+
+/* Interactive Elements - Both Version */
+
+.button-primary-l {
+  width: 100%;
+  max-width: 255px;
+
+  border: none;
+  border-radius: 24px;
+
+  background-color: var(--main-purple);
+  color: var(--white);
+
+  padding: 14px 0;
+}
+
+.button-primary-l:hover {
+  background: var(--main-purple-hover);
+}
+
+.button-primary-s {
+  background-color: var(--main-purple);
+  color: var(--white);
+}
+
+.button-primary-s:hover {
+  background: var(--main-purple-hover);
+}
+
+.button-destrictive {
+  background-color: var(--red);
+  color: var(--main-purple);
+}
+
+.button-destrictive:hover {
+  background-color: var(--red-hover);
+}
+
+/* Interactive Elements - Light Version */
+
+.button-primary-s,
+.light .button-secondary,
+.light .button-destrictive {
+  width: 100%;
+  max-width: 255px;
+
+  border: none;
+  border-radius: 20px;
+
+  padding: 8px 0;
+}
+
+.light .button-secondary {
+  background-color: var(--light-grey-lb);
+  color: var(--main-purple);
+}
+
+.light .button-secondary:hover {
+  background-color: var(--main-purple-hover);
+}
+
+/* Interactive Elements - Dark Version */
+
+.dark .button-secondary {
+  background-color: var(--white);
+  color: var(--main-purple);
+}
+
+.dark .button-secondary:hover {
+  background-color: var(--main-purple-hover);
+}
+
+/* Aside */
+
+aside {
+  grid-row: 1 / 3;
+  padding: 32px;
+}
+
+/* Aside - Logo Container */
+
+aside .logo-container {
+  width: 100%;
+  height: 67px;
+  background-repeat: no-repeat;
+}
+
+.light aside .logo-container {
+  background-image: url("./assets/logo-light.svg");
+}
+
+.dark aside .logo-container {
+  background-image: url("./assets/logo-dark.svg");
+}
+
+/* Aside - Board List */
+
+.board-list {
+  color: var(--medium-grey);
+}
+
+.board-list-item,
+.new-board-button {
+  cursor: pointer;
+  border-radius: 20px;
+
+  display: flex;
+  align-items: center;
+
+  list-style: none;
+
+  padding: 8px 0;
+}
+
+.board-list-item::before,
+.new-board-button::before {
+  aspect-ratio: 1 / 1;
+  width: 16px;
+  display: inline-block;
+  content: "";
+  -webkit-mask: url("./assets/icon-board.svg") no-repeat 50% 50%;
+  mask: url("./assets/icon-board.svg") no-repeat 50% 50%;
+  -webkit-mask-size: cover;
+  mask-size: cover;
+
+  margin: 0 16px 0 0;
+
+  background-color: var(--medium-grey);
+}
+
+.board-list-item[data-active="false"]:hover,
+.new-board-button:hover {
+  transition: 0.2s;
+  background-color: var(--light-grey-lb);
+  box-shadow: -50px 0 0 0 var(--light-grey-lb);
+}
+
+.board-list-item[data-active="true"] {
+  background-color: var(--main-purple);
+  color: var(--white);
+
+  box-shadow: -50px 0 0 0 var(--main-purple);
+}
+
+.board-list-item[data-active="true"]::before {
+  filter: brightness(100);
+}
+
+.new-board-button {
+  font-weight: bold;
+  color: var(--main-purple);
+}
+
+.new-board-button::before {
+  background-color: var(--main-purple);
+}
+
+/* Header */
+
+header {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 0 24px;
+}
+
+/* Columns */
+
+.columns {
+  padding: 24px;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 24px;
+}
