--- a/src/style.css
+++ b/src/style.css
@@ -75,18 +75,6 @@ body {
   line-height: 15px;
 }
 
-/* Typography */
-
-main {
-  width: 100vw;
-  height: 100vh;
-
-  display: grid;
-  grid-template-columns: 300px 1fr;
-  grid-template-rows: 97px 1fr;
-  grid-area: "one two" "one three";
-}
-
 /* Interactive Elements - Both Version */
 
 .button-primary-l {
@@ -158,110 +146,26 @@ main {
   background-color: var(--main-purple-hover);
 }
 
-/* Aside */
+/* Board */
+.board-element {
+  width: 100%;
+  height: 100vh;
 
-aside {
-  grid-row: 1 / 3;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  gap: 20px;
+
   padding: 32px;
 }
 
-/* Aside - Logo Container */
-
-aside .logo-container {
-  width: 100%;
-  height: 67px;
-  background-repeat: no-repeat;
+.column-element {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.light aside .logo-container {
-  background-image: url("./assets/logo-light.svg");
-}
-
-.dark aside .logo-container {
-  background-image: url("./assets/logo-dark.svg");
-}
-
-/* Aside - Board List */
-
-.board-list {
-  color: var(--medium-grey);
-}
-
-.board-list-item,
-.new-board-button {
+.task-element {
   cursor: pointer;
-  border-radius: 20px;
-
-  display: flex;
-  align-items: center;
-
-  list-style: none;
-
-  padding: 8px 0;
-}
-
-.board-list-item::before,
-.new-board-button::before {
-  aspect-ratio: 1 / 1;
-  width: 16px;
-  display: inline-block;
-  content: "";
-  -webkit-mask: url("./assets/icon-board.svg") no-repeat 50% 50%;
-  mask: url("./assets/icon-board.svg") no-repeat 50% 50%;
-  -webkit-mask-size: cover;
-  mask-size: cover;
-
-  margin: 0 16px 0 0;
-
-  background-color: var(--medium-grey);
-}
-
-.board-list-item[data-active="false"]:hover,
-.new-board-button:hover {
-  transition: 0.2s;
-  background-color: var(--light-grey-lb);
-  box-shadow: -50px 0 0 0 var(--light-grey-lb);
-}
-
-.board-list-item[data-active="true"] {
-  background-color: var(--main-purple);
-  color: var(--white);
-
-  box-shadow: -50px 0 0 0 var(--main-purple);
-}
-
-.board-list-item[data-active="true"]::before {
-  filter: brightness(100);
-}
-
-.new-board-button {
-  font-weight: bold;
-  color: var(--main-purple);
-}
-
-.new-board-button::before {
-  background-color: var(--main-purple);
-}
-
-/* Header */
-
-header {
-  width: 100%;
-  height: 100%;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  padding: 0 24px;
-}
-
-/* Columns */
-
-.columns {
-  padding: 24px;
-
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 24px;
+  border-radius: 8px;
+  padding: 24px 16px;
 }
