--- a/src/style.css
+++ b/src/style.css
@@ -159,6 +159,8 @@ body {
 }
 
 .column-element {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -168,4 +170,31 @@ body {
   cursor: pointer;
   border-radius: 8px;
   padding: 24px 16px;
+}
+
+/* Popup */
+
+.popup {
+  z-index: 999;
+  width: 90vw;
+  max-width: 480px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
+  background-color: var(--white);
+
+  border-radius: 6px;
+  box-shadow: 0 0 0 100vh hsla(0, 0%, 0%, 0.5);
+
+  padding: 32px;
+}
+
+.subtask-title {
+  margin: 0 0 16px 0;
 }
