--- a/src/style.css
+++ b/src/style.css
@@ -195,6 +195,36 @@ body {
   padding: 32px;
 }
 
+.task-title-container {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 24;
+}
+
+.task-options {
+  cursor: pointer;
+  aspect-ratio: 1 / 1;
+  width: 20px;
+
+  border: none;
+
+  background-image: url("./assets/icon-vertical-ellipsis.svg");
+  background-color: hsla(0, 0%, 0%, 0);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.subtask-container {
+  width: 100%;
+
+  display: grid;
+  gap: 8px;
+}
+
 .subtask-title {
-  margin: 0 0 16px 0;
+  margin: 0 0 8px 0;
 }
