--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  outline: 1px solid hsla(0, 100%, 50%, 0.2);
+  /* outline: 1px solid hsla(0, 100%, 50%, 0.2); */
 }
 
 body {
@@ -144,6 +144,28 @@ body {
 
 .dark .button-secondary:hover {
   background-color: var(--main-purple-hover);
+}
+
+/* Header */
+.header {
+  width: 100%;
+  height: 97px;
+
+  display: flex;
+  align-items: center;
+
+  border-bottom: 1px solid var(--lines-light);
+}
+
+.header-logo-container {
+  width: 300px;
+  height: 100%;
+
+  background-image: url("./assets/logo-dark.svg");
+  background-position: 34px center;
+  background-repeat: no-repeat;
+
+  border-right: 1px solid var(--lines-light);
 }
 
 /* Board */
