--- a/src/style.css
+++ b/src/style.css
@@ -77,79 +77,48 @@ body {
 
 /* Interactive Elements - Both Version */
 
-.button-primary-l {
-  width: 100%;
-  max-width: 255px;
-
-  border: none;
-  border-radius: 24px;
-
-  background-color: var(--main-purple);
-  color: var(--white);
-
-  padding: 14px 0;
-}
-
-.button-primary-l:hover {
-  background: var(--main-purple-hover);
-}
-
-.button-primary-s {
-  background-color: var(--main-purple);
-  color: var(--white);
-}
-
-.button-primary-s:hover {
-  background: var(--main-purple-hover);
-}
-
-.button-destrictive {
-  background-color: var(--red);
-  color: var(--main-purple);
-}
-
-.button-destrictive:hover {
-  background-color: var(--red-hover);
-}
-
 /* Interactive Elements - Light Version */
 
 .button-primary-s,
-.light .button-secondary,
-.light .button-destrictive {
+.button-secondary {
+  cursor: pointer;
+
   width: 100%;
-  max-width: 255px;
+
+  padding: 8px 0;
+
+  font-weight: 500;
 
   border: none;
   border-radius: 20px;
-
-  padding: 8px 0;
 }
 
-.light .button-secondary {
-  background-color: var(--light-grey-lb);
+.button-primary-s {
+  color: var(--white);
+  background-color: var(--main-purple);
+}
+
+.button-secondary {
   color: var(--main-purple);
-}
-
-.light .button-secondary:hover {
-  background-color: var(--main-purple-hover);
+  background-color: var(--light-grey-lb);
 }
 
 /* Interactive Elements - Dark Version */
 
-.dark .button-secondary {
-  background-color: var(--white);
-  color: var(--main-purple);
-}
+/* Main */
+main {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 97px 1fr;
+  grid-template-columns: 300px 1fr;
 
-.dark .button-secondary:hover {
-  background-color: var(--main-purple-hover);
+  grid-template-areas: "header header" "aside board";
 }
 
 /* Header */
 .header {
-  width: 100%;
-  height: 97px;
+  grid-area: header;
 
   display: flex;
   align-items: center;
@@ -174,18 +143,29 @@ body {
   height: calc(100vh - 97px);
 
   border-right: 1px solid var(--lines-light);
+  float: left;
 }
 
 /* Board */
 .board-element {
-  width: 100%;
-  height: 100vh;
+  overflow-x: scroll;
 
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  background-color: var(--light-grey-lb);
+
+  padding: 24px;
+}
+
+/* Boards Container */
+.boards-container {
+  display: flex;
+  flex-wrap: nowrap;
   gap: 20px;
+}
 
-  padding: 32px;
+/* Column Element */
+.column-element {
+  flex: 0 0 auto;
+  width: 240px;
 }
 
 /* Board List */
@@ -210,6 +190,24 @@ body {
   padding: 14px 0;
 }
 
+/* Column Element */
+.column-element {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* Task Element */
+.task-element {
+  cursor: pointer;
+  width: 100%;
+
+  background-color: var(--white);
+  border-radius: 8px;
+
+  padding: 24px;
+}
+
 .board-list > li::before {
   aspect-ratio: 1 / 1;
   height: 16px;
@@ -226,20 +224,6 @@ body {
   background-color: var(--main-purple);
   box-shadow: -100px 0 0 0 var(--main-purple);
   color: var(--white);
-}
-
-.column-element {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.task-element {
-  cursor: pointer;
-  border-radius: 8px;
-  padding: 24px 16px;
 }
 
 /* Popup */
@@ -288,13 +272,169 @@ body {
   background-repeat: no-repeat;
 }
 
-.subtask-container {
+input[type="text"] {
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid rgba(130, 143, 163, 0.25);
+
+  padding: 8px 16px;
+}
+
+.inputs-container {
+  display: grid;
+  gap: 12px;
+}
+
+.input-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.input-container label {
+  width: 100%;
+}
+
+.input-container input[type="text"] {
+  width: 100%;
+}
+
+textarea {
+  width: 100%;
+  height: auto;
+
+  resize: none;
+
+  border: 1px solid var(--medium-grey);
+  border-radius: 4px;
+  color: var(--medium-grey);
+
+  padding: 16px;
+}
+
+textarea::-webkit-scrollbar {
+  width: 8px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: var(--medium-grey);
+}
+
+.input-container button {
+  cursor: pointer;
+
+  aspect-ratio: 1 / 1;
+  height: 16px;
+
+  background-color: var(--white);
+  border: none;
+
+  background-image: url("./assets/icon-cross.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* Task Options */
+.task-options-container {
+  position: relative;
+}
+
+.task-options-list {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+
+  display: grid;
+  gap: 16px;
+
+  width: 192px;
+
+  background-color: var(--white);
+
+  border-radius: 8px;
+
+  padding: 16px;
+}
+
+.task-options-list > li {
+  cursor: pointer;
+
+  color: var(--medium-grey);
+
+  list-style: none;
+}
+
+.task-options-list > .delete-task-item {
+  color: var(--red);
+}
+
+/* Dropdown */
+.dropdown {
+  position: relative;
+  width: 100%;
+}
+
+.status-dropdown-title {
+  position: relative;
+  border: 1px solid var(--medium-grey);
+
+  border-radius: 4px;
+
+  padding: 8px 16px;
+}
+
+.status-dropdown-title::after {
+  position: absolute;
+  top: 50%;
+  right: 16px;
+
+  transform: translateY(-50%);
+
+  aspect-ratio: 1 / 1;
+  width: 16px;
+  content: "";
+
+  background-image: url("./assets/icon-chevron-down.svg");
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  filter: grayscale(100);
+}
+
+.status-dropdown-options {
+  position: absolute;
+
   width: 100%;
 
   display: grid;
   gap: 8px;
+
+  color: var(--medium-grey);
+  background-color: var(--white);
+
+  border-radius: 8px;
+
+  padding: 16px;
+  margin: 8px 0 0 0;
 }
 
-.subtask-title {
-  margin: 0 0 8px 0;
+.status-dropdown-option {
+  cursor: pointer;
+
+  list-style: none;
+}
+
+/* Visible */
+*[data-visible="false"] {
+  display: none;
+}
+
+/* Focus */
+*:focus {
+  outline: 1px solid var(--main-purple);
 }
