--- a/src/style.css
+++ b/src/style.css
@@ -84,11 +84,9 @@ body {
 .button-secondary {
   cursor: pointer;
 
-  width: 100%;
-
-  padding: 8px 0;
-
   font-weight: 500;
+
+  height: 40px;
 
   border: none;
   border-radius: 20px;
@@ -97,6 +95,10 @@ body {
 .button-primary-l {
   color: var(--white);
   background-color: var(--main-purple);
+
+  border-radius: 24px;
+
+  padding: 0 24px;
 }
 
 .button-primary-s {
@@ -147,6 +149,20 @@ main {
   border-right: 1px solid var(--lines-light);
 }
 
+.header-container {
+  flex:  1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 0 24px;
+}
+
+.header-container .button-primary-l {
+  max-width: 240px;
+  font-weight: 700;
+}
+
 /* Aside */
 .aside {
   width: 300px;
@@ -158,11 +174,40 @@ main {
 
 /* Board */
 .board-element {
+  position: relative;
+
+  width: auto;
   overflow-x: scroll;
 
   background-color: var(--light-grey-lb);
 
   padding: 24px;
+}
+
+.board-element::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.board-element::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: var(--main-purple);
+}
+
+.board-empty-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
 }
 
 /* Boards Container */
@@ -171,13 +216,6 @@ main {
   flex-wrap: nowrap;
   gap: 20px;
 }
-
-/* Column Element */
-.column-element {
-  flex: 0 0 auto;
-  width: 240px;
-}
-
 /* Board List */
 .board-list {
   display: grid;
@@ -202,6 +240,8 @@ main {
 
 /* Column Element */
 .column-element {
+  flex: 0 0 auto;
+  width: 240px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -214,6 +254,7 @@ main {
 
   background-color: var(--white);
   border-radius: 8px;
+  box-shadow: 0px 4px 6px 0px rgba(54, 78, 126, 0.10);
 
   padding: 24px;
 }
